<resources>
    <string name="app_name">IBM Android starter application</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_intro">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="view_map">View Map</string>
    <string name="submit_info">Submit Info</string>
    <string name="name">ProtestVision\n\nFight for equality.\nStay safe.</string>
    <string name="red_dot">Warning</string>
    <string name="blue_dot">Medical aid</string>
    <string name="green_dot">Food available</string>
    <string name="orange_dot">Water available</string>
</resources>
